# macro-valuation-desk

./: .agentignore  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  project-plan.md  tsconfig.json
apps/pipelines/: pyproject.toml
apps/pipelines/.prefect-test-home/: prefect.db  prefect.db-shm  prefect.db-wal
apps/pipelines/mvd_pipelines.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/pipelines/src/flows/: all_flows.py  currency_analysis_flow.py  equity_market_valuation_flow.py  highest_ps_ranking_flow.py  macro_seed_flow.py  taylor_rule_flow.py
apps/pipelines/src/lib/: db.py  runtime_env.py
apps/pipelines/src/sql/: pipeline_schema.sql  taylor_rule_schema.sql
apps/pipelines/src/tasks/: fetch_seed_data.py  load_macro_seed.py  (+7 more)
apps/pipelines/tests/: conftest.py  test_all_flows.py  test_currency_analysis_flow.py  test_currency_irp_transform.py  test_currency_ppp_transform.py  test_db_load_foundations.py  test_dbnomics_adapter.py  test_ecb_adapter.py  test_eodhd_adapter.py  test_equity_adapter.py  test_equity_market_valuation_flow.py  test_equity_market_valuation_transform.py  test_error_handling.py  test_fred_adapter.py  test_highest_ps_ranking_flow.py  test_highest_ps_ranking_transform.py  test_load_taylor_layers.py  test_macro_core_etl_tasks.py  test_macro_seed_flow.py  test_prefect_runtime.py  test_reference_metrics_transform.py  test_runtime_env.py  test_source_fetch.py  test_source_registry.py  test_staging_transform.py  test_taylor_rule_flow.py  test_taylor_rule_transform.py  test_yahoo_finance_adapter.py
(+173 files in other folders)
