[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mvd-pipelines"
version = "0.1.0"
description = "Macro Valuation Desk pipeline service"
requires-python = ">=3.13"
dependencies = [
  "prefect>=3.2.0",
  "psycopg[binary]>=3.2.9",
  "pytest>=8.3.5"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-p no:cacheprovider"
